Make sure the libpeas-gtk dependency isn't optimized away

Aggressive linkers could drop the dependency which would
cause problems using during runtime.
Based on a patch for the same problem for gedit by Garret Regier.

https://bugzilla.gnome.org/show_bug.cgi?id=739618